{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 80,
  "lineage": "baa9dbce-00e7-1ec8-6894-735d6cfe9810",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "imtec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:il-central-1:314525640319:loadbalancer/app/imtec/dd67eee2877975d6",
            "arn_suffix": "app/imtec/dd67eee2877975d6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "imtec-27005153.il-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:il-central-1:314525640319:loadbalancer/app/imtec/dd67eee2877975d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "imtec",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ac3749215afde82a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1cbd99dd27a5307"
              },
              {
                "subnet_id": "subnet-0d0b0b1b77639731b"
              }
            ],
            "subnets": [
              "subnet-0a1cbd99dd27a5307",
              "subnet-0d0b0b1b77639731b"
            ],
            "vpc_id": "vpc-042cee0fdc6a5a7e2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z09170902867EHPV2DABU"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "imtech_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:314525640319:security-group/sg-0ac3749215afde82a",
            "description": "launch-wizard-4 created 2025-04-06T12:00:50.378Z",
            "filter": null,
            "id": "sg-0ac3749215afde82a",
            "name": "launch-wizard-4",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-042cee0fdc6a5a7e2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:314525640319:subnet/subnet-088b7d937a4cd5d85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "available_ip_address_count": 1006,
            "cidr_block": "172.30.8.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b7d937a4cd5d85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314525640319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "imtech-private-1"
            },
            "vpc_id": "vpc-042cee0fdc6a5a7e2"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "imtech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:314525640319:vpc/vpc-042cee0fdc6a5a7e2",
            "cidr_block": "172.30.0.0/17",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d9d4939a94b1ac87",
                "cidr_block": "172.30.0.0/17",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0269932d808b3b841",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042cee0fdc6a5a7e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0037ad6cccbb0fdf0",
            "owner_id": "314525640319",
            "tags": {
              "Name": "imtech"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "imtec_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:il-central-1:314525640319:listener/app/imtec/dd67eee2877975d6/e53c6482550fd638",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:il-central-1:314525640319:targetgroup/ozai-ecs-tg/5ba5375842e61c1d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:314525640319:listener/app/imtec/dd67eee2877975d6/e53c6482550fd638",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:il-central-1:314525640319:loadbalancer/app/imtec/dd67eee2877975d6",
            "mutual_authentication": [],
            "port": 89,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.amit_ecs_tg",
            "data.aws_lb.imtec",
            "data.aws_vpc.imtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "amit_ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:il-central-1:314525640319:targetgroup/ozai-ecs-tg/5ba5375842e61c1d",
            "arn_suffix": "targetgroup/ozai-ecs-tg/5ba5375842e61c1d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:314525640319:targetgroup/ozai-ecs-tg/5ba5375842e61c1d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:il-central-1:314525640319:loadbalancer/app/imtec/dd67eee2877975d6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ozai-ecs-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-042cee0fdc6a5a7e2"
          },
          "dependencies": [
            "data.aws_vpc.imtech_vpc"
          ]
        }
      ]
    }
  ]
}